# relayd

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  build.zig  build.zig.zon  dual-protocol-port-allocation.md  flake.nix  test_root.zig
.forgejo/workflows/: build.yaml  ci.yml  docker.yaml  test.yml
.github/workflows/: build.yaml  docker.yaml  test.yml
docs/: API.md
docs/api/: http.md
docs/architecture/: port-forwarder.md
docs/superpowers/plans/: 2026-05-09-dual-protocol-port-allocation.md  2026-05-10-prometheus-http-metrics.md  2026-05-15-rust-migration-m0-core-foundation.md  2026-05-15-rust-migration-m1-allocation-service.md  2026-05-15-rust-migration-m2-http-control-plane.md  2026-05-15-rust-migration-m3-baseline-tcp-runtime.md  2026-05-15-rust-migration-m4-baseline-udp-runtime.md  2026-05-15-rust-migration-m5-dual-protocol-runtime-parity.md  2026-05-15-rust-migration-m6-prometheus-metrics-parity.md  2026-05-15-rust-migration-m7-rust-binary-cutover-docs-docker-ci.md  2026-05-22-cargo-nextest-ci.md  2026-05-22-tracing-lifecycle-logs.md  2026-05-22-udp-forward-source-bind-host.md  2026-05-22-udp-max-sessions-config-overrides.md  (+2 more)
scripts/ci/: e2e_iperf3.sh  fetch-sqlite3.py
src/: app.zig  compat.zig  config.rs  config.zig  lib.rs  main.zig  metrics.rs  metrics.zig  model.rs  net_compat.zig  prometheus.rs  prometheus_exporter.zig  uuid.rs
src/http/: control_plane.rs  server.zig
src/model/: allocation.zig
src/runtime/: facade.rs  manager.zig  mod.rs  netlink.rs  real.rs  tcp.rs  udp.rs
src/service/: allocation_service.rs  allocation_service.zig  mod.rs
src/storage/: sqlite.rs  sqlite.zig  sqlite_abi.zig
src/util/: uuidv7.zig
tests/integration/: http_api_test.zig  service_forward_test.zig
tests/unit/: allocator_test.zig  config_test.zig  runtime_udp_fast_path_test.zig  sqlite_test.zig
(+17 files in other folders)
