[package]
name = "relayd"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[lib]
name = "relayd"
path = "src/lib.rs"

[[bin]]
name = "relayd"
path = "src/bin/relayd.rs"

[dependencies]
async-trait = "0.1"
sea-orm = { version = "1.1", default-features = false, features = ["macros", "sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
tempfile = "3"
