[package]
name = "relayd"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[lib]
name = "relayd"
path = "src/lib.rs"

[[bin]]
name = "relayd"
path = "src/bin/relayd.rs"

[dependencies]
async-trait = "0.1"
axum = "0.8"
http-body-util = "0.1"
mnl = { version = "0.3.0", optional = true }
nftnl = { version = "0.9.2", optional = true }
sea-orm = { version = "1.1", default-features = false, features = ["macros", "sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time", "signal"] }
uuid = { version = "1", features = ["v7", "serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3"

[features]
default = []
netlink = ["dep:mnl", "dep:nftnl"]
